# File-Compressor

Final-ver/: CMakeLists.txt  README.md  readme
Final-ver/Include/: BitWriter.hpp  Huffman.hpp  LZ77.hpp  TokenIO.hpp
Final-ver/assets/: compression proof  read
Final-ver/doc/: output.huf  test-files
Final-ver/src/: BitReader.cpp  BitWriter.cpp  Huffman.cpp  LZ77.cpp  TokenIO.cpp  main  main.cpp
Final-ver/tests/: test  test_LZ77.cpp  test_TokenIO.cpp  test_huffman.cpp  test_symbol_stream.cpp  test_token_stream.cpp
Ver-1/: block compression-decompres
Ver-1/DOC/: info  output.huf  outputtest.txt
Ver-1/assets/: BitReader.hpp  info
Ver-1/include/: Huffman.hpp
Ver-1/src/: Huffman.cpp  main.cpp  readme
